RESOLVED FIXED154394
Fix unused-const-variable warning on non Cocoa platforms
https://bugs.webkit.org/show_bug.cgi?id=154394
Summary Fix unused-const-variable warning on non Cocoa platforms
Csaba Osztrogonác
Reported 2016-02-18 06:03:51 PST
./../Source/WebCore/html/HTMLPlugInImageElement.cpp:73:19: warning: unused variable 'removeSnapshotTimerDelay' [-Wunused-const-variable] static const auto removeSnapshotTimerDelay = std::chrono::milliseconds { 1500 }; ^
Attachments
Patch (1.35 KB, patch)
2016-02-18 06:05 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-02-18 06:05:17 PST
WebKit Commit Bot
Comment 2 2016-02-18 12:59:24 PST
Comment on attachment 271656 [details] Patch Clearing flags on attachment: 271656 Committed r196773: <http://trac.webkit.org/changeset/196773>
WebKit Commit Bot
Comment 3 2016-02-18 12:59:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.