Fix unused-const-variable warning on non Cocoa platforms https://bugs.webkit.org/show_bug.cgi?id=154394

Reviewed by Michael Catanzaro.

* html/HTMLPlugInImageElement.cpp:


Canonical link: https://commits.webkit.org/172527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196773 268f45cc-cd09-0410-ab3c-d52691b4dbfc